--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^3.0.3",
+    "axios": "^0.27.2",
+    "qs": "^6.11.0",
     "typescript": "^4.6.4",
     "vite": "^3.0.7",
     "vue-tsc": "^0.39.5"
