--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.7.13",
     "@types/qs": "^6.9.7",
     "@vitejs/plugin-vue": "^3.0.3",
     "axios": "^0.27.2",
